@@ -32,7 +32,7 @@ import.document.type = \
 A DocumentType node cannot be imported.
 
 add.self = \
-Cannot add a node as a child of it's self (name: {1})
+Cannot add a node as a child of itself (name: {1}).
 
 attribute.missing = \
 The "{0}" attribute was not found.
@@ -51,7 +51,7 @@ The child node (type: {0}, name: {1}) is missing.
 
 child.type = \
 The current node (type: {0}, name: {1}) do not allow children of the given \
-type (type: {2}, name: {3})
+type (type: {2}, name: {3}).
 
 children.not.allowed = \
 The current node (type: {0}, name: {1}) cannot have children.
@@ -59,6 +59,15 @@ The current node (type: {0}, name: {1}) cannot have children.
 cloning.error = \
 An error occured while cloning a node (type: {0}, name: {1}). \
 The original error message was: "{2}".
+
+css.parser.class = \
+The CSS parser class {0} cannot be found.
+
+css.parser.creation = \
+The CSS parser class '{0}' cannot be instantiated.
+
+css.parser.access = \
+The CSS parser class '{0}' cannot be accessed.
 
 document.child.already.exists = \
 The node (type: {0}, name: {1}) cannot be inserted, since the document \
@@ -88,6 +97,9 @@ A DocumentType node cannot be imported.
 invalid.element = \
 The current document is unable to create an element of the requested type \
 (namespace: {0}, name: {1}).
+
+invalid.qname = \
+The given name ("{0}") is an invalid QName.
 
 inuse.attribute = \
 The given attribute "{0}" is already in use.
