@@ -10,7 +10,7 @@ Bug fixing is an on-going task, so it is implied in all sub-releases.
 1. Bugzilla problem reports fixed:
 
     44590, 44919, 44936, 44966, 45112, 45114, 45117, 45520, 45883, 
-    44553, 45958, 46072, 46124
+    44553, 45958, 46072, 46124, 46430, 46431
 
 2. New features
 
@@ -43,6 +43,9 @@ Bug fixing is an on-going task, so it is implied in all sub-releases.
     compared to other animations on the same attribute.
   * Avoid canvas repaint problems that occur in some circumstances when
     it is being resized.
+  * Exceptions are now thrown if an invalid QName is passed to
+    DOMImplementation.createDocumentType().
+  * DocumentType.getName() now returns the correct value.
 
 1.7beta1 -> 1.7
 ---------------
